project-visualforce/BasePackage/main/default/objects/Team__c/fields/Pokemon_5__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_5__c</fullName>
    <label>Pokemon 5</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>