project-visualforce/BasePackage/main/default/objects/Team__c/fields/Pokemon_6__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_6__c</fullName>
    <label>Pokemon 6</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>