project-visualforce/BasePackage/main/default/objects/Team__c/fields/Team_Loss__c.field-meta.xml
<CustomField>
    <fullName>Team_Loss__c</fullName>
    <label>Team_Loss</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>