project-visualforce/BasePackage/main/default/objects/Team__c/fields/Team_Win__c.field-meta.xml
<CustomField>
    <fullName>Team_Win__c</fullName>
    <label>Team Win</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>